--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         Add your email below to stay up-to-date with announcements and our launch deals.</p>
     </div>
     <div class="flex-item-3">
-      <input type="email" name="Email Address" placeholder="Email Address" value="text" focus onclick="this.value=''">
+      <input type="email" name="Email Address" placeholder="Email Address" value="Email Address" focus onclick="this.value=''">
       <input type="image" id="error" src="images/icon-error.svg" alt="error-icon">
       <button type="button" name="button" onclick="togglekey()">
         <image class="img-btn" src="images/icon-arrow.svg" alt=">">
